<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>uk.ac.cam.cares.jps</groupId>
    <artifactId>SensorLoggerMobileAppAgent</artifactId>
    <version>2.0.0</version>
    <packaging>war</packaging>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- Version of the JPS Base Library to use -->
        <jps.base.version>1.44.1</jps.base.version>
    </properties>


    <!-- Parent POM -->
    <parent>
        <groupId>uk.ac.cam.cares.jps</groupId>
        <artifactId>jps-parent-pom</artifactId>
        <version>2.3.0</version>
    </parent>

    <!-- Profiles are used to switch between building for development and production
    environments. Use "-P profile-id" within an mvn command to build with a profile -->
    <profiles>
        <!-- This profile should be used for development builds. -->
        <profile>
            <id>dev-profile</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <!-- Set property to download development logging config -->
                <log.artifact>java-logging-dev</log.artifact>
            </properties>
        </profile>

        <!-- This profile should be used for production builds. -->
        <profile>
            <id>prod-profile</id>
            <properties>
                <!-- Set property to download production logging config -->
                <log.artifact>java-logging-prod</log.artifact>
            </properties>
        </profile>
    </profiles>

    <!-- Build settings -->
    <build>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                </configuration>
            </plugin>

                        <!-- Allows maven executions -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>1.6.0</version>
            </plugin>


            <!-- Maven plugin for unit tests -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.0</version>
            </plugin>

            <!-- Maven plugin for packaging -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-war-plugin</artifactId>
                <version>3.3.1</version>
            </plugin>

            <!-- Downloads and extracts ZIP archives from Maven repository -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.2.0</version>
                <!-- Version, configuration, and executions should be pulled from the
                parent POM unless overridden here. -->

            </plugin>

        </plugins>
    </build>

    <!-- Dependencies -->
    <dependencies>

        <!-- JPS Base Library -->
        <dependency>
            <groupId>uk.ac.cam.cares.jps</groupId>
            <artifactId>jps-base-lib</artifactId>
            <version>${jps.base.version}</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>6.0.5</version>
        </dependency>

        <dependency>
            <groupId>uk.ac.cam.cares.downsampling</groupId>
            <artifactId>downsampling</artifactId>
            <version>1.0.0</version>
        </dependency>

        <!-- logs -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-web</artifactId>
        </dependency>


        <!-- Java servlet API, version pulled from parent -->
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>javax.servlet-api</artifactId>
        </dependency>

        <!-- JSON handling -->
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
        </dependency>

        <!-- Testing, versions pulled from parent -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>3.5.7</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-geosparql</artifactId>
            <version>4.1.0</version>
        </dependency>

        <!-- for interacting with the stack -->
        <dependency>
            <groupId>com.cmclinnovations</groupId>
            <artifactId>stack-clients</artifactId>
            <version>1.27.2</version>
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.22</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>uk.ac.cam.cares.ogm</groupId>
            <artifactId>ogm</artifactId>
            <version>1.1.1</version>
        </dependency>

        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>7.6.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>


    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.jena</groupId>
                <artifactId>jena-core</artifactId>
                <version>4.10.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>